Fixing center alignment

--- a/app/assets/stylesheets/pages/course_edit_page.scss
+++ b/app/assets/stylesheets/pages/course_edit_page.scss
@@ -4,7 +4,7 @@
   word-wrap: inherit;
 }
 
-.edit-module-text {
+.edit-module-container {
   padding: 40px 0px;
 }
 
@@ -89,6 +89,6 @@
 }
 
 .course-edit-delete {
-  align-self: flex-end;
+  align-self: center;
   margin-left: auto;
 }
